[package]
name = "wave-steganography"
version = "0.1.0"
authors = ["austin-millan <austin.millan@protonmail.com>"]

[dependencies]
hound = "*"
derive_builder = "*"
read-byte-slice = "*"
clap = { version = "2", features = ["yaml"] }

[lib]
name = "steganography"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin.rs"

[workspace]
members = ["src/chaos_image_encryption"]

[dependencies.chaos_image_encryption]
path = "src/chaos_image_encryption"